navbar gefixt met deels lesley zijn code en de code is refactored de css

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -46,12 +46,22 @@ body {
   /*}*/
 label.hamburger {
   font-size: 1.2rem;
-  position: absolute;
-  right: 1em;
-  top: 0.7em;
+  position: relative;
+  right: 0;
   bottom: 23px;
+  top: 0.1em;
   fill: var(--color-main-text);
+
 }
+/*}*/
+/*label.hamburger {*/
+/*  font-size: 1.2rem;*/
+/*  position: absolute;*/
+/*  right: 1em;*/
+/*  top: 0.7em;*/
+/*  bottom: 23px;*/
+/*  fill: var(--color-main-text);*/
+/*}*/
 
   input[type="checkbox"], .hamburger {
     float: right;
@@ -73,21 +83,23 @@ label.hamburger {
     color: var(--color-main-text);
   }
 
-  /*nav > h3 {*/
-  /*  float: right;*/
-  /*  position: relative;*/
-  /*  top: 20px;*/
-  /*  left: 20px;*/
-  /*  font-size: 16px;*/
-  /*}*/
-nav > h3 {
-  float: right;
-  position: absolute;
-  top: 40px;
-  right: 5px;
-  /*left: 31px;*/
-  font-size: 16px;
-}
+  nav > h3 {
+    float: right;
+    position: relative;
+    top: 20px;
+    left: 20px;
+    font-size: 16px;
+  }
+
+
+/*nav > h3 {*/
+/*  float: right;*/
+/*  position: absolute;*/
+/*  top: 40px;*/
+/*  right: 5px;*/
+/*  !*left: 31px;*!*/
+/*  font-size: 16px;*/
+/*}*/
 
   ul {
     /*display: none;*/
@@ -183,6 +195,7 @@ nav > h3 {
       display: inline-block;
       gap: 20px;
     }
+
 
     .tablet-desktop {
       display: inline-flex;
