--- a/views/partials/ShowNotes.ejs
+++ b/views/partials/ShowNotes.ejs
@@ -6,12 +6,12 @@
 
 
         else { %>
-            <p>Er is geen notitie.</p>
+            <li>Er is geen notitie.</li>
         <% } %>
     <% }
 
     else { %>
-        <p>No feedback available.</p>
+        <li>No feedback available.</li>
     <% } %>
 </ul>
 
