--- a/views/partials/ShowScore.ejs
+++ b/views/partials/ShowScore.ejs
@@ -1,4 +1,6 @@
+
 <ul class="showscore">
+    <li>dit is uw eerdere score</li>
     <% if (feedback.length > 0) { %>
         <% if (feedback[feedback.length - 1].rating) { %>
             <li>Algemeen : <%= feedback[feedback.length - 1].rating.kitchen %></li>
